--- a/code/templates/core/details.html
+++ b/code/templates/core/details.html
@@ -15,7 +15,8 @@
     {% block text %}
     {% endblock %}
 
-    {% block browse_body %}
+    <!-- detail tabs -->
+    {% block details %}
     {% endblock %}
 
 {% endblock %}
