--- a/code/templates/core/details_manufacturers.html
+++ b/code/templates/core/details_manufacturers.html
@@ -4,7 +4,7 @@
 {% load url_tags %}
 
 {% block title %}
-<title>FDA Drug Monitor - Drug Details</title>
+<title>FDA Drug Monitor - Manufacturer Details</title>
 {% endblock %}
 
 {% block image %}
@@ -14,7 +14,7 @@
 {% block text %}
     <div class="row">
         <div class="col-xs-12">
-            <h1>Drug Details
+            <h1>Manufacturer Details
                 <br/>
                 <small>Information for <strong>{{ q }}</strong></small>
             </h1>
