--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h1>Adverse Event Details
-                <small>Information for <strong>{{ q }}</strong></small>
+                <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
             </h1>
         </div>
     </div>
