--- a/code/templates/core/details_enforcement_reports.html
+++ b/code/templates/core/details_enforcement_reports.html
@@ -16,7 +16,7 @@
         <div class="col-xs-12">
             <h1>Enforcement Report Details
                 <br/>
-                <small>Information for <strong>{{ q }}</strong></small>
+                <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
             </h1>
             <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
